src/main/k8s/traefik/ingress-daemonSet-traefik.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
    kubernetes.io/cluster-service: "true"
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      hostNetwork: true
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-conf
      containers:
      - image: containous/traefik:v1.3.1
        name: traefik-ingress-lb
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: "/config"
            name: "config"
        ports:
          - name: http
            containerPort: 80
            hostPort: 80
          - name: admin
            containerPort: 8080
        args:
        - --configfile=/config/traefik.toml
        - --web
        - -d
        - --web.address=:8080
        - --kubernetes
        - --logLevel=DEBUG
