src/main/k8s/traefik/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: www.sandroboehme.de
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
